# ppb-5k_workspace

./: .gitignore  dockerfile  motor_test_configurable.py  test_motors.py
log/: latest_build
robot_scripts/: dockerfile  launch_bot.sh  motor_test_configurable.py  test_camera.py  test_motors.py  test_vlm.py
robot_scripts/ppb_state_manager/: package.xml  setup.cfg  setup.py
robot_scripts/ppb_state_manager/ppb_state_manager/: state_manager_node.py
robot_scripts/src/imu_handler/: package.xml  setup.py
robot_scripts/src/joystick_control/: setup.py
robot_scripts/src/movement/: package.xml  setup.py
robot_scripts/src/robot_bringup/: setup.py
robot_scripts/src/vision/: lane_json.py  lane_zmq_publisher.py  lane_zmq_subscriber_example.py  run_yolo_off_camera.py
robot_scripts/src/vision_models/: package.xml  setup.cfg  setup.py
robot_scripts/src/vlm_vision/: CMakeLists.txt  package.xml  setup.cfg  setup.py
robot_scripts/src/vlm_vision/launch/: vlm_vision.launch.py  vlm_zmq_listener.launch.py
robot_scripts/src/vlm_vision/srv/: CheckObject.srv
robot_scripts/src/vlm_vision/vlm_vision/: __init__.py  vlm_pipeline.py  vlm_vision_node.py  vlm_yes_no.py  zmq_check_listener.py
robot_scripts/src/working_code/: listener.py  talker.py  zmq_listener.py
robot_scripts/src/zmq_bridge/: package.xml  setup.cfg  setup.py
src/joystick_control/: package.xml
src/joystick_control/joystick_control/: joystick_node.py
src/movement/: setup.py
src/robot_bringup/: package.xml
src/vision/: hailo_yolo_inferece.py
src/working_code/: zmq_test.py
(+30 files in other folders)
